Added new pages and adjusted names

--- a/arkivskaber.html
+++ b/arkivskaber.html
@@ -250,7 +250,7 @@
                               <table
                                 id="navne"
                                 width="100%"
-                                class="table table-hover mb-0 table-striped"
+                                class="table table-hover mb-0"
                               >
                                 <thead>
                                   <tr>
