--- a/search/search-heuristiskenhed.html
+++ b/search/search-heuristiskenhed.html
@@ -39,12 +39,12 @@
         <div class="col-10 mt-5 col-centered">
           <ul class="nav nav-tabs">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Arkivskaber</a>
+              <a class="nav-link" href="../index.html#arkivskaber"
+                >Arkivskaber</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../index.html#heuristiskenhed"
-                >Heuristisk enhed</a
-              >
+              <a class="nav-link active" href="#">Heuristisk enhed</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../index.html#arkiveringsversion"
@@ -74,51 +74,64 @@
           <div class="card special pt-3 pl-3 pr-3 pb-3">
             <div class="card-body">
               <!-- arkivskaber start -->
-              <form action="search/search-arkivskaber.html">
+              <form action="search/heuristiskenhed.html">
                 <div class="container-fluid">
-                  <div class="row mb-3">
+                  <div class="row">
                     <div class="col-sm-3">
-                      <label for="navn">Navn</label>
+                      <label for="henavn">HE-Navn</label>
                       <input
                         type="text"
                         class="form-control bg-light"
-                        value="Frederiksberg Politi"
-                        id="navn"
+                        value=""
+                        id="henavn"
                       />
                     </div>
                     <div class="col-sm-3">
-                      <label for="emne">Emne</label>
+                      <label for="arkivskaber">Arkivskaber</label>
                       <input
                         type="text"
                         class="form-control bg-light"
-                        id="emne"
+                        id="arkivskaber"
+                        value="Indenrigsministeriet"
                       />
                     </div>
                     <div class="col-sm-3">
-                      <label for="geografi">Geografi</label>
+                      <label for="type">Type</label>
                       <input
                         type="text"
                         class="form-control bg-light"
-                        id="geografi"
+                        id="type"
                       />
                     </div>
                     <div class="col-sm-3 mb-3">
-                      <label for="proveniensnr">Proveniens-nr.</label>
+                      <label for="enr">E-nr.</label>
                       <input
                         type="text"
                         class="form-control bg-light"
-                        id="proveniensnr"
+                        id="enr"
                       />
                     </div>
-                    <div class="col-sm-12">
-                      <button type="submit" class="btn btn-primary search">
+                  </div>
+                  <div class="row mb-3">
+                    <div class="col-sm-3">
+                      <label for="fra">Fra</label>
+                      <input
+                        type="text"
+                        class="form-control bg-light"
+                        id="fra"
+                      />
+                    </div>
+                    <div class="col-sm-3">
+                      <label for="til">Til</label>
+                      <input
+                        type="text"
+                        class="form-control bg-light"
+                        id="til"
+                      />
+                    </div>
+                    <div class="col-sm-3">
+                      <button type="submit" class="btn btn-primary search mt-4">
                         Søg
-                      </button>
-                      <button
-                        type="submit"
-                        class="ml-2 btn btn-outline-primary"
-                      >
-                        + Ny arkivskaber
                       </button>
                     </div>
                   </div>
@@ -145,44 +158,79 @@
                 >
                   <thead>
                     <tr>
-                      <th scope="col">Præfiks</th>
                       <th scope="col">Arkivskaber</th>
+                      <th scope="col">HE-Navn</th>
                       <th scope="col">Fra</th>
                       <th scope="col">Til</th>
+                      <th scope="col">Type</th>
+                      <th scope="col">Sorteringsfelt</th>
                     </tr>
                   </thead>
                   <tbody>
-                    <tr class="clickable-row" data-href="../arkivskaber.html">
+                    <tr
+                      class="clickable-row"
+                      data-href="../heuristiskenhed.html"
+                    >
                       <td>
-                        FRB Politi
+                        Indenrigsministeriet
                       </td>
-                      <td>Frederiksberg Pol</td>
+                      <td>Kredsaflytningssystem</td>
                       <td>1972</td>
                       <td>1988</td>
+                      <td>Komponent</td>
+                      <td>sh2001</td>
                     </tr>
-                    <tr class="clickable-row" data-href="../arkivskaber.html">
+                    <tr
+                      class="clickable-row"
+                      data-href="../heuristiskenhed.html"
+                    >
                       <td>
-                        FRB Politi
+                        Indenrigsministeriet
                       </td>
-                      <td>Frederiksberg Pol</td>
+                      <td>Kredsaflytningssystem</td>
                       <td>1972</td>
                       <td>1988</td>
+                      <td>Komponent</td>
+                      <td>sh2001</td>
                     </tr>
-                    <tr class="clickable-row" data-href="../arkivskaber.html">
+                    <tr
+                      class="clickable-row"
+                      data-href="../heuristiskenhed.html"
+                    >
                       <td>
-                        FRB Politi
+                        Indenrigsministeriet
                       </td>
-                      <td>Frederiksberg Pol</td>
+                      <td>Kredsaflytningssystem</td>
                       <td>1972</td>
                       <td>1988</td>
+                      <td>Komponent</td>
+                      <td>sh2001</td>
                     </tr>
-                    <tr class="clickable-row" data-href="../arkivskaber.html">
+                    <tr
+                      class="clickable-row"
+                      data-href="../heuristiskenhed.html"
+                    >
                       <td>
-                        FRB Politi
+                        Indenrigsministeriet
                       </td>
-                      <td>Frederiksberg Pol</td>
+                      <td>Kredsaflytningssystem</td>
                       <td>1972</td>
                       <td>1988</td>
+                      <td>Komponent</td>
+                      <td>sh2001</td>
+                    </tr>
+                    <tr
+                      class="clickable-row"
+                      data-href="../heuristiskenhed.html"
+                    >
+                      <td>
+                        Indenrigsministeriet
+                      </td>
+                      <td>Kredsaflytningssystem</td>
+                      <td>1972</td>
+                      <td>1988</td>
+                      <td>Komponent</td>
+                      <td>sh2001</td>
                     </tr>
                   </tbody>
                 </table>
